--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -70,6 +70,14 @@
     </div>
   </div>
 
+  <div class="container-fluid" id="container-erro">
+    <div class="row justify-content-center align-items-center">
+      <div class="container-fluid d-flex justify-content-center align-items-center" id="imgdiv">
+        <h2 id="error">
+      </div>
+    </div>  
+  </div> 
+
   <div class="container-fluid" id="container-infos">
     <div class="row justify-content-center align-items-center">
 
