--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -72,8 +72,8 @@
 
   <div class="container-fluid" id="container-erro">
     <div class="row justify-content-center align-items-center">
-      <div class="container-fluid d-flex justify-content-center align-items-center" id="imgdiv">
-        <h2 id="error">
+      <div class="container-fluid d-flex justify-content-center align-items-center">
+        <h2 id="error">Fime não encontrado !</h2>
       </div>
     </div>  
   </div> 
