--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <link href="../css/buscafilme.css" rel="stylesheet">  
+  <link href="../css/sobre.css" rel="stylesheet">  
   <title>Resiliaflix - Busca</title>
 </head>
 
@@ -62,40 +62,19 @@
     </div>
   </div>
 
-  <div class="container-fluid" id="containerp">
-    <div class="input-group mb-3" id="inputGroup">
-      <input type="text" id="movie" class="form-control" placeholder="Nome do filme" aria-label="Nome do filme"
-        aria-describedby="button-addon2">
-      <button class="btn btn-outline-info" type="search" id="button-addon2" onclick="buscar();">Buscar</button>
-    </div>
-  </div>
-
-  <div class="container-fluid" id="container-erro">
-    <!-- <div class="row justify-content-center align-items-center"> -->
-      <div class="container-fluid d-flex justify-content-center align-items-center">
-        <h2 id="error">
-      </div>
-    <!-- </div>   -->
-  </div> 
-
-  <div class="container-fluid" id="container-infos">
+  
+  <div class="container-fluid" id="resiliaflix-l">
     <div class="row justify-content-center align-items-center">
-
-      <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center" id="imgdiv">
-        <img id="posterA">
+      <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
+        <img src="../images/" id="pic">
       </div>
 
       <div class="col-12 col-sm-6">
-        <h3 id="title-p"></h3>
-        <h5 class="mb-3" id="year-p"></h5>
-        <h5 class="lead mb-2" id="actor-p"></h5>
-        <h5 class="lead" id="infos-p"></h5>
+        <h1></h1>
+        <p></p>
       </div>
-
-
     </div>
   </div>
-
 
   <footer>
     <div class="row">
@@ -113,11 +92,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../js/buscafilme.js"></script>
-  <script src="../js/sideBar.js"></script>
-
-
+  
 </body>
 
 </html>
