--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link href="../css/buscafilme.css" rel="stylesheet">
-  <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">  
+  <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
   <title>Resiliaflix - Busca</title>
 </head>
 
@@ -26,37 +26,47 @@
         <button type="button" class="navbar-toggler btnMenu">
           <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
         </button>
-        <a href="#" class="navbar-brand navBrand">
+        <a href="../index.html" class="navbar-brand navBrand">
           <img src="../images/ResiliaflixLog-Blue.png" class='logo' alt="Logo">
         </a>
 
         <ul class="list-unstyled font-weight-bold buttonList">
 
-          <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px" height="23px">Home</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px" height="23px">Filmes</a></li>
-          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
+          <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
+                height="23px">Home</a></li>
+          <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+                height="23px">Filmes</a></li>
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+                height="23px">Sobre</a>
           </li>
-          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px" height="23px">Contato</a>
+          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+                height="23px">Contato</a>
           </li>
 
         </ul>
 
         <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
 
-          <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px" height="23px">Home</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px" height="23px">Filmes</a></li>
-          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
+          <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
+                height="23px">Home</a></li>
+          <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+                height="23px">Filmes</a></li>
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+                height="23px">Sobre</a>
           </li>
-          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px" height="23px">Contato</a>
+          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+                height="23px">Contato</a>
           </li>
         </ul>
 
         <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
           <li class="nav-item">
-            <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
+            <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px"
+                height="33px"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px" height="30px"></a>
+            <a class="nav-link" id='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px"
+                height="30px"></a>
           </li>
         </ul>
       </nav>
@@ -76,8 +86,8 @@
       <div class="container-fluid d-flex justify-content-center align-items-center">
         <h2 id="error">Filme não encontrado !</h2>
       </div>
-    </div>  
-  </div> 
+    </div>
+  </div>
 
   <div class="container-fluid" id="container-infos">
     <div class="row justify-content-center align-items-center">
@@ -100,10 +110,10 @@
   <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
     <div class="row">
       <div class="col-12 my-2">
-        <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
+        <h6 class='text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
       </div>
       <div class="col-12">
-        <h6 class = 'text-center text-white lead'><small>©todos os direitos reservados</small></h6>
+        <h6 class='text-center text-white lead'><small>©todos os direitos reservados</small></h6>
       </div>
     </div>
   </footer>
