--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,7 +9,9 @@
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../css/contato.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
   <title>ResiliaFlix</title>
 </head>
@@ -22,15 +24,15 @@
         <button type="button" class="navbar-toggler btnMenu">
           <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
         </button>
-        <a href="#" class="navbar-brand navBrand">
+        <a href="../index.html" class="navbar-brand navBrand">
           <img src="../images/ResiliaflixLog-Blue.png" class='logo' alt="Logo">
         </a>
 
         <ul class="list-unstyled font-weight-bold buttonList">
 
-          <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
+          <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
                 height="23px">Home</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+          <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
           <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a></li>
@@ -41,9 +43,9 @@
 
         <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
 
-          <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
+          <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
                 height="23px">Home</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+          <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
           <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a></li>
@@ -64,111 +66,122 @@
       </nav>
 
   </header>
-<div class="container Texts">
-  <h1 class="lead text-center">Contato</h1>
-  <h2 class="lead text-center">Conheça nosso time !</h2>
-</div>
-    <div class="container d-flex justify-content-evenly align-items-center Cards">
+  <div class="container Texts">
+    <h1 class="lead text-center">Contato</h1>
+    <h2 class="lead text-center">Conheça nosso time !</h2>
+  </div>
+  <div class="container d-flex justify-content-evenly align-items-center Cards">
 
-      <div class="row rowClass">
+    <div class="row rowClass">
 
-        <div class="col-12 d-flex justify-content-center">
-          <img src="../images/caio.jpg" class="rounded-circle" width="150px" height="150px">
-        </div>
-
-        <div class="col-12 d-flex justify-content-center">
-          <h2 class="lead">Caio Alves</h2>
-        </div>
-
-        <div class="col-12 d-flex justify-content-center">
-          <ul class="d-flex list-unstyled">
-            <li><a href="https://github.com/caioalvess"><img src="../images/github.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.instagram.com/cah.felipe/?hl=pt-br"><img src="../images/instagram-icon.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="#"><img src="../images/linkedin.png" width="32px" height="32px" id="socialIcon"></a></li>
-          </ul>
-        </div>
-
+      <div class="col-12 d-flex justify-content-center">
+        <img src="../images/caio.jpg" class="rounded-circle" width="150px" height="150px">
       </div>
 
+      <div class="col-12 d-flex justify-content-center">
+        <h2 class="lead">Caio Alves</h2>
+      </div>
 
-        <div class="row rowClass">
+      <div class="col-12 d-flex justify-content-center">
+        <ul class="d-flex list-unstyled">
+          <li><a href="https://github.com/caioalvess"><img src="../images/github.png" width="32px" height="32px"
+                id="socialIcon"></a></li>
+          <li><a href="https://www.instagram.com/cah.felipe/?hl=pt-br"><img src="../images/instagram-icon.png"
+                width="32px" height="32px" id="socialIcon"></a></li>
+          <li><a href="#"><img src="../images/linkedin.png" width="32px" height="32px" id="socialIcon"></a></li>
+        </ul>
+      </div>
 
-          <div class="col-12 d-flex justify-content-center">
-            <img src="../images/reh.jpg" class="rounded-circle" width="150px" height="150px">
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <h2 class="lead">Renata Hortense</h2>
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <ul class="d-flex list-unstyled">
-              <li><a href="https://github.com/renatahortense"><img src="../images/github.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.instagram.com/renata.hortense/"><img src="../images/instagram-icon.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.linkedin.com/mwlite/in/renata-hortense-63914165"><img src="../images/linkedin.png" width="32px" height="32px" id="socialIcon"></a></li>
-            </ul>
-          </div>
+    </div>
 
-        </div>
 
-        <div class="row rowClass">
+    <div class="row rowClass">
 
-          <div class="col-12 d-flex justify-content-center">
-            <img src="../images/drey.jpg" class="rounded-circle" width="150px" height="150px">
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <h2 class="lead">Andrey Nithack</h2>
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <ul class="d-flex list-unstyled">
-              <li><a href="https://github.com/Nithack"><img src="../images/github.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.instagram.com/drey_nit/?hl=pt-br"><img src="../images/instagram-icon.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.linkedin.com/in/andreynithack/"><img src="../images/linkedin.png" width="32px" height="32px" id="socialIcon"></a></li>
-            </ul>
-          </div>
+      <div class="col-12 d-flex justify-content-center">
+        <img src="../images/reh.jpg" class="rounded-circle" width="150px" height="150px">
+      </div>
 
-        </div>
+      <div class="col-12 d-flex justify-content-center">
+        <h2 class="lead">Renata Hortense</h2>
+      </div>
 
-        <div class="row rowClass">
+      <div class="col-12 d-flex justify-content-center">
+        <ul class="d-flex list-unstyled">
+          <li><a href="https://github.com/renatahortense"><img src="../images/github.png" width="32px" height="32px"
+                id="socialIcon"></a></li>
+          <li><a href="https://www.instagram.com/renata.hortense/"><img src="../images/instagram-icon.png" width="32px"
+                height="32px" id="socialIcon"></a></li>
+          <li><a href="https://www.linkedin.com/mwlite/in/renata-hortense-63914165"><img src="../images/linkedin.png"
+                width="32px" height="32px" id="socialIcon"></a></li>
+        </ul>
+      </div>
 
-          <div class="col-12 d-flex justify-content-center">
-            <img src="../images/ellen.jpg" class="rounded-circle" width="150px" height="150px">
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <h2 class="lead">Ellen Oliveira</h2>
-          </div>
-  
-          <div class="col-12 d-flex justify-content-center">
-            <ul class="d-flex list-unstyled">
-              <li><a href="https://github.com/EllenOli"><img src="../images/github.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.instagram.com/ellen_gnfr/?hl=pt-br"><img src="../images/instagram-icon.png" width="32px" height="32px" id="socialIcon"></a></li>
-            <li><a href="https://www.linkedin.com/mwlite/in/ellen-oliveira-6328851ab"><img src="../images/linkedin.png" width="32px" height="32px" id="socialIcon"></a></li>
-            </ul>
-          </div>
+    </div>
 
-        </div>
+    <div class="row rowClass">
+
+      <div class="col-12 d-flex justify-content-center">
+        <img src="../images/drey.jpg" class="rounded-circle" width="150px" height="150px">
+      </div>
+
+      <div class="col-12 d-flex justify-content-center">
+        <h2 class="lead">Andrey Nithack</h2>
+      </div>
+
+      <div class="col-12 d-flex justify-content-center">
+        <ul class="d-flex list-unstyled">
+          <li><a href="https://github.com/Nithack"><img src="../images/github.png" width="32px" height="32px"
+                id="socialIcon"></a></li>
+          <li><a href="https://www.instagram.com/drey_nit/?hl=pt-br"><img src="../images/instagram-icon.png"
+                width="32px" height="32px" id="socialIcon"></a></li>
+          <li><a href="https://www.linkedin.com/in/andreynithack/"><img src="../images/linkedin.png" width="32px"
+                height="32px" id="socialIcon"></a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="row rowClass">
+
+      <div class="col-12 d-flex justify-content-center">
+        <img src="../images/ellen.jpg" class="rounded-circle" width="150px" height="150px">
+      </div>
+
+      <div class="col-12 d-flex justify-content-center">
+        <h2 class="lead">Ellen Oliveira</h2>
+      </div>
+
+      <div class="col-12 d-flex justify-content-center">
+        <ul class="d-flex list-unstyled">
+          <li><a href="https://github.com/EllenOli"><img src="../images/github.png" width="32px" height="32px"
+                id="socialIcon"></a></li>
+          <li><a href="https://www.instagram.com/ellen_gnfr/?hl=pt-br"><img src="../images/instagram-icon.png"
+                width="32px" height="32px" id="socialIcon"></a></li>
+          <li><a href="https://www.linkedin.com/mwlite/in/ellen-oliveira-6328851ab"><img src="../images/linkedin.png"
+                width="32px" height="32px" id="socialIcon"></a></li>
+        </ul>
+      </div>
 
     </div>
 
   </div>
 
+  </div>
+
 
   <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
-      <div class="row">
-        <div class="col-12 my-2">
-          <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
-        </div>
-        <div class="col-12">
-          <h6 class = 'text-center text-white lead Direitos'><small>©todos os direitos reservados</small></h6>
-        </div>
+    <div class="row">
+      <div class="col-12 my-2">
+        <h6 class='text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
       </div>
-    </footer>
+      <div class="col-12">
+        <h6 class='text-center text-white lead Direitos'><small>©todos os direitos reservados</small></h6>
+      </div>
+    </div>
+  </footer>
 
 
-  
+
   <script src="../js/sideBar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
