--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/bootstrap.*">
   <title>Resilia Flix</title>
 </head>
 
@@ -491,6 +492,7 @@
       crossorigin="anonymous"></script>
     <script src="js/principal.js"></script>
     <script src="../js/sideBar.js"></script>
+    <script src="js/bootstrap.*"></script>
 </body>
 
 </html>
